# mcp-hubspot-agent

./: .env.example  .gitignore  README.md  test_connection.py
client/: README.md  agent.py  pyproject.toml
server/: README.md  hubspot_server.py  pyproject.toml
